--- a/files/templates/index.html
+++ b/files/templates/index.html
@@ -16,9 +16,9 @@
        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Example Spellbooks
        <span class="caret"></span></a>
        <ul class="dropdown-menu">
-         <li><a href="#">Wizard 1</a></li>
-         <li><a href="#">Sorcerer 5</a></li>
-         <li><a href="#">Bard 20</a></li>
+         <li><a href="/processForm?classList=Wizard&lvl=1&mod=3&otherbooks=1">Wizard 1</a></li>
+         <li><a href="/processForm?classList=Sorcerer&lvl=5&mod=4&otherbooks=1">Sorcerer 5</a></li>
+         <li><a href="/processForm?classList=Bard&lvl=20&mod=5&otherbooks=1">Bard 20</a></li>
        </ul>
      </li>
      <li><a href="/goToForm">Generator</a></li>
