--- a/files/templates/genForm.html
+++ b/files/templates/genForm.html
@@ -16,9 +16,9 @@
        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Example Spellbooks
        <span class="caret"></span></a>
        <ul class="dropdown-menu">
-         <li><a href="#">Wizard 1</a></li>
-         <li><a href="#">Sorcerer 5</a></li>
-         <li><a href="#">Bard 20</a></li>
+         <li><a href="/processForm?classList=Wizard&lvl=1&mod=3&otherbooks=1">Wizard 1</a></li>
+         <li><a href="/processForm?classList=Sorcerer&lvl=5&mod=4&otherbooks=1">Sorcerer 5</a></li>
+         <li><a href="/processForm?classList=Bard&lvl=20&mod=5&otherbooks=1">Bard 20</a></li>
        </ul>
      </li>
      <li class="active"><a href="#">Generator</a></li>
@@ -51,7 +51,8 @@
     {% endfor %}
   </select>
 
-  <label class='checkbox-inline'><input type="checkbox" name='otherbooks' value="">Use other books?</label>
+  <label>Use other books? <input type="checkbox" name='otherbooks' value="1"></label>
+
   <input type="submit" value="Submit">
 </form>
 {% endblock %}
