--- a/files/templates/results.html
+++ b/files/templates/results.html
@@ -21,8 +21,8 @@
          <li><a href="/processForm?classList=Bard&lvl=20&mod=5&otherbooks=1">Bard 20</a></li>
        </ul>
      </li>
-     <li><a href="/goToForm">Generator</a></li>
-     <li><a href="#">Dice Roller</a></li>
+     <li><a href="/Form">Generator</a></li>
+     <li><a href="/diceRoller">Dice Roller</a></li>
    </ul>
  </div>
 </nav>
