--- a/files/templates/diceRoller.html
+++ b/files/templates/diceRoller.html
@@ -1,10 +1,57 @@
 {% extends 'layout.html' %}
 
 {% block head %}
+<title>Midnight Katana-Rain</title>
 {% endblock %}
 
 {% block header %}
+<nav class="navbar navbar-default">
+ <div class="container-fluid">
+   <div class="navbar-header">
+     <a class="navbar-brand" href="#">Spellbook Generator</a>
+   </div>
+   <ul class="nav navbar-nav">
+     <li><a href="/">Home</a></li>
+     <li class="dropdown">
+       <a class="dropdown-toggle" data-toggle="dropdown" href="#">Example Spellbooks
+       <span class="caret"></span></a>
+       <ul class="dropdown-menu">
+         <li><a href="/processForm?classList=Wizard&lvl=1&mod=3&otherbooks=1">Wizard 1</a></li>
+         <li><a href="/processForm?classList=Sorcerer&lvl=5&mod=4&otherbooks=1">Sorcerer 5</a></li>
+         <li><a href="/processForm?classList=Bard&lvl=20&mod=5&otherbooks=1">Bard 20</a></li>
+       </ul>
+     </li>
+     <li><a href="/Form">Generator</a></li>
+     <li class='active'><a href="#">Dice Roller</a></li>
+   </ul>
+ </div>
+</nav>
 {% endblock %}
 
 {% block content %}
+<div class="container-fluid">
+  <h3>Dice Roller</h3>
+  <p>Be warned: these dice are explosive and tend to roll <i>very</i> well.</p>
+  <form action="/diceCompute">
+    <label for="dieSize">d</label>
+    <select name="dieSize">
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="6">6</option>
+      <option value="8">8</option>
+      <option value="10">10</option>
+      <option value="12">12</option>
+      <option value="20">20</option>
+    </select> <br>
+    <label for="numDies">Number of Dice</label>
+    <input type="number" name="numDies" value="1"><br>
+    <input type="submit" value="Roll!">
+  </form>
+</div>
+{% if rolled %}
+<div class="container-fluid">
+  <h2>You rolled: {{roll}}</h2>
+  <p>{{quote}}</p>
+</div>
+{% endif %}
 {% endblock %}
